<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>


    <string name="title">My Nanodegree Apps!</string>

    <string name="app_1_name">SPOTIFY STREAMER</string>
    <string name="app_2_name">FOOTBALL SCORES APP</string>
    <string name="app_3_name">LIBRARY APP</string>
    <string name="app_4_name">BUILD IT BIGGER</string>
    <string name="app_5_name">XYZ READER</string>
    <string name="app_6_name">CAPSTONE: MY OWN APP</string>

    <string name="app_1_toast">This button will launch Spotify Streamer</string>
    <string name="app_2_toast">This button will launch Football Scores</string>
    <string name="app_3_toast">This button will launch Library App</string>
    <string name="app_4_toast">This button will launch Build it Bigger</string>
    <string name="app_5_toast">This button will launch XYZ Reader</string>
    <string name="app_6_toast">This button will launch Capstone: My Own App</string>

</resources>
