<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        style="@style/Title"
        android:text="@string/title" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                style="@style/Button"
                android:onClick="onClickApp1"
                android:text="@string/app_1_name" />

            <Button
                style="@style/Button"
                android:onClick="onClickApp2"
                android:text="@string/app_2_name" />

            <Button
                style="@style/Button"
                android:onClick="onClickApp3"
                android:text="@string/app_3_name" />

            <Button
                style="@style/Button"
                android:onClick="onClickApp4"
                android:text="@string/app_4_name" />

            <Button
                style="@style/Button"
                android:onClick="onClickApp5"
                android:text="@string/app_5_name" />

            <Button
                style="@style/Button.important"
                android:onClick="onClickApp6"
                android:text="@string/app_6_name" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
